# nova-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  build.gradle  gradle.properties  readme.md
cmake/: Setup.cmake  SetupGradle.cmake  SetupUnix.cmake  SetupWindows.cmake
cmake/compiler/: clang.cmake  gcc.cmake  icc.cmake  mingw.cmake  msvc.cmake
cmake/modules/: CheckoutSubmodule.cmake  SetPolicy.cmake
src/main/cpp/: CMakeLists.txt
src/main/cpp/gl/windowing/: glfw_gl_window.cpp
src/main/cpp/model/: texture_manager.h
src/main/cpp/model/gl/: gl_uniform_buffer.h
src/main/cpp/model/loaders/: shader_loading.cpp
src/main/cpp/test/: main.cpp
src/main/cpp/utils/: utils.h
src/main/java/com/continuum/nova/: NovaNative.java
src/main/java/com/continuum/nova/launcher/: NovaServerTweaker.java  NovaTweaker.java  Yggdrasil.java
src/main/jsons/: 1.10-dev.json  1.10-rel.json  1.10.json
src/main/patches/minecraft/net/minecraft/client/: Minecraft.java.patch
src/main/patches/minecraft/net/minecraft/client/gui/: GuiButton.java.patch  GuiScreen.java.patch
src/main/patches/minecraft/net/minecraft/client/gui/inventory/: GuiEditStructure.java.patch
src/main/patches/minecraft/net/minecraft/client/renderer/: EntityRenderer.java.patch
